# python-programming

./: build_in_functions.py  conditional.py  dict.py  list_method.py  my_bar_chart.html  os_demo.py  pyproject.toml  render.html  requirement.txt  set.py  try_catch.py  user_input.py  whilte.py
basic/: constants.py  hash_cus.py  logging_cus.py  math_example.py  my_logging.py  operator.py  qt_cus.py  random_e.py  request_exmple.py
classes-objects/: main.py  requirement.txt  user.py
echart/: echarts_cus.py
fast-api/: main.py  requirements.txt
gitlab-api-requests/: main.py
module/: python_module.py
package_cc/: __init__.py  cc1.py  cc2.py
python_error/: python_error.py
python_files/: python_files.py
python_files_test/: test_file.py
selenium/: webtest.py
spider/: beautifulsoup_cus.py
spreadsheet/: inventory_with_total_value.xlsx  main.py
