[project]
name = "python-programming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "fastapi==0.121.2",
    "idna==3.11",
    "lxml>=6.0.2",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pyecharts>=2.1.0",
    "requests==2.32.5",
    "selenium>=4.41.0",
    "sniffio==1.3.1",
    "starlette==0.49.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
]
